--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,17 @@
 <h2>Customer Login</h2>
+
 <form method="post">
   <input name="email" placeholder="Email" required><br>
   <input name="password" type="password" placeholder="Password" required><br>
   <button type="submit">Login</button>
 </form>
+
 <a href="/register">Register</a>
+
+<hr style="margin:20px 0;">
+
+<p style="font-size:14px;">Are you an Admin?</p>
+
+<a href="/admin">
+  <button type="button">Admin Login</button>
+</a>
