Change image input from file upload to URL input

--- a/templates/add_product.html
+++ b/templates/add_product.html
@@ -47,7 +47,7 @@
 
       <!-- IMAGE FILE UPLOAD -->
       <label for="image">Product Image:</label>
-      <input type="file" name="image" id="image" required>
+      <input type="text" name="image" placeholder="Enter Image URL" required>
 
       <button type="submit" class="btn">Add Product</button>
     </form>
