--- a/templates/cart.html
+++ b/templates/cart.html
@@ -23,6 +23,9 @@
         </form>
     </div>
 </div>
-
+    <footer style="margin-top:40px; padding:15px; text-align:center; background:#111; color:#fff;">
+    <p>© 2026 Shivam Super Market</p>
+    <p>📞 1234567890 | ✉️ shivamsupermarket@gmail.com</p>
+  </footer>
 </body>
 </html>
