--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -103,6 +103,12 @@
     <p>Email: dnyaneshwarbiramanell@gmail.com | Phone: +91 81089 32793</p>
     <p>Address: Panchgani</p>
   </footer>
+<footer style="margin-top:40px; padding:15px; text-align:center; background:#111; color:#fff;">
+    <p>If you have any questions, suggestions, or need support regarding our Grocery Management System, feel free to contact us.</p>
+    <p>Email: dnyaneshwarbiramanell@gmail.com</p>
+    <p>Phone: +91 81089 32793</p>
+    <p>Address: Panchgani</p>
+</footer>
 
 </body>
 </html>
