--- a/templates/admin_login.html
+++ b/templates/admin_login.html
@@ -15,5 +15,12 @@
         </form>
     </div>
 </div>
+    <footer style="margin-top:40px; padding:15px; text-align:center; background:#111; color:#fff;">
+    <p>If you have any questions, suggestions, or need support regarding our Grocery Management System, feel free to contact us.</p>
+    <p>Email: dnyaneshwarbiramanell@gmail.com</p>
+    <p>Phone: +91 81089 32793</p>
+    <p>Address: Panchgani</p>
+</footer>
+
 </body>
 </html>
