--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -54,6 +54,7 @@
           <th>Name</th>
           <th>Price (₹)</th>
           <th>Edit</th>
+          <th>Delete</th>
         </tr>
       </thead>
       <tbody>
